Prod-EU/force-app/main/default/objects/Record_Updater__c/Record_Updater__c.object-meta.xml
<CustomObject>
    <description>To be used for updating any Object&apos;s individual field. Logic can be implemented in batch jobs to pull multiple fields for a given record and updated at once.</description>
    <label>Record Updater</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Updater</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>