Prod-EU/force-app/main/default/objects/Record_Updater__c/fields/Acted_On__c.field-meta.xml
<CustomField>
    <fullName>Acted_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Record&apos;s action was completed. This is to be used to find out which actions already took place.</description>
    <label>Acted On</label>
    <type>Checkbox</type>
</CustomField>