Prod-EU/force-app/main/default/objects/Record_Updater__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Field Type of the field that needs to be acted on.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>