Prod-EU/force-app/main/default/objects/Record_Updater__c/fields/Fieldname__c.field-meta.xml
<CustomField>
    <fullName>Fieldname__c</fullName>
    <description>API of the Field Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API of the Field Name</inlineHelpText>
    <label>Fieldname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>