Prod-EU/force-app/main/default/objects/Record_Updater__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>