Prod-EU/force-app/main/default/objects/Record_Updater__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the field that should be used in the action.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>